syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum EnterType {
	ENTER_TYPE_NONE = 0;
	ENTER_TYPE_SELF = 1;
	ENTER_TYPE_GOTO = 2;
	ENTER_TYPE_JUMP = 3;
	ENTER_TYPE_OTHER = 4;
	ENTER_TYPE_BACK = 5;
	ENTER_TYPE_DUNGEON = 6;
	ENTER_TYPE_DUNGEON_REPLAY = 7;
	ENTER_TYPE_GOTO_BY_PORTAL = 8;
	ENTER_TYPE_SELF_HOME = 9;
	ENTER_TYPE_OTHER_HOME = 10;
	ENTER_TYPE_GOTO_RECREATE = 11;
}
